Made overflow-y: overlay on body to solve page jumping.

--- a/docs/style.css
+++ b/docs/style.css
@@ -127,6 +127,7 @@ body {
     font-family: transat,sans-serif;
     line-height: 1.6;
     overflow-x: hidden;
+    overflow-y: overlay;
 }
 
 /* WS 2.28 ~~ Implement MIN-WIDTH and MAX-WIDTH into body. */
